Fix CSS list items on mobile (#42)

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -47,6 +47,7 @@ figure {
 
 .item-img {
   max-width: 100%;
+  max-height: 100%;
   object-fit: cover;
 }
 
